--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Riki Jin
 SEOTitle: 金璋的博客 | Riki Jin
-header-img: img/Arknights.png
+header-img: img/Arknights2.jpg
 email: jz97@mail.ustc.edu.cn
 description: "Arknights."
 keyword: "周杰伦，梅西"
